src/objects/FieloCMS__Category__c.object
<CustomObject>
    <fields>
        <fullName>FieloCMS__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>FieloCMS__Category__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DocumentId__c</fullName>
        <label>Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Items__c</fullName>
        <label>Items</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCMS__URL__c</fullName>
        <formula>IF ( IsBlank(FieloCMS__DocumentId__c), &apos;&apos;, 
&apos;//c.&apos; + $Setup.FieloCMS__OrganizationSettings__c.FieloCMS__Instance__c  + &apos;.content.force.com/servlet/servlet.ImageServer?id=&apos; + FieloCMS__DocumentId__c + &apos;&amp;oid=&apos; + $Organization.Id + &apos;&amp;lastModifiedDate=&apos; + Text(LastModifiedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <label>Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>